implementacio del ticket 3 de backend
