# backend/src/routes/positionRoutes.ts
@@ -1,7 +1,9 @@
 import { Router } from 'express';
-import { getCandidatesByPositionController } from '../presentation/controllers/positionController';
+import { getCandidatesByPositionController, getPositionsController } from '../presentation/controllers/positionController';
 
 const router = Router();
+
+router.get('/', getPositionsController);
 
 router.get('/:id/candidates', getCandidatesByPositionController);
 
